adding configuration for auto import

--- a/solr/conf/dataimport.properties
+++ b/solr/conf/dataimport.properties
@@ -1,3 +1,7 @@
+#Tue Jul 21 12:10:50 CEST 2010
+metadataObject.last_index_time=2010-09-20 11\:12\:47
+last_index_time=2010-09-20 11\:12\:47
+
 #################################################
 #                                               #
 #       dataimport scheduler properties         #
@@ -26,7 +30,7 @@ port=8983
 
 #  URL params [mandatory]
 #  remainder of URL
-#params=/select?qt=/dataimport&command=delta-import&clean=false&commit=true
+params=/select?qt=/dataimport&command=delta-import&clean=false&commit=true
 
 #  schedule interval
 #  number of minutes between two runs
