adding new categories index

--- a/solr/conf/dataimport.properties
+++ b/solr/conf/dataimport.properties
@@ -15,7 +15,7 @@ syncEnabled=0
 #  which cores to schedule
 #  in a multi-core environment you can decide which cores you want syncronized
 #  leave empty or comment it out if using single-core deployment
-syncCores=activities
+syncCores=activities,categories
 
 #  solr server name or IP address
 #  [defaults to localhost if empty]
